--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   backend:
+    user: "1000:1000"
     build: ./backend
     container_name: ai-chat-backend
     ports:
